# salt-describe

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_CLA.md  LICENSE.new  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/patches/: win_network.patch
.github/workflows/: ci.yml  deploy-package-action.yml  docs-action.yml  package-action.yml  pr.yml  pre-commit-action.yml  release.yml  test-action.yml  test.yml
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
docs/: all.rst  conf.py  gettingstarted.rst  index.rst
docs/ref/: saltext.rst  saltext.salt_describe.rst  saltext.salt_describe.runners.rst  saltext.salt_describe.utils.rst
requirements/: base.txt  dev.txt  docs.txt  tests.txt
src/saltext/salt_describe/: __init__.py  version.py
src/saltext/salt_describe/modules/: salt_describe_cron.py  salt_describe_file.py  salt_describe_firewalld.py  salt_describe_host.py  salt_describe_iptables.py  salt_describe_pip.py  salt_describe_pkg.py  salt_describe_pkgrepo.py  salt_describe_service.py  salt_describe_ssh_known_hosts.py  salt_describe_sysctl.py  salt_describe_timezone.py  salt_describe_user.py
src/saltext/salt_describe/runners/: salt_describe.py  salt_describe_cron.py  salt_describe_file.py  salt_describe_firewalld.py  salt_describe_host.py  salt_describe_iptables.py  salt_describe_mod.py  salt_describe_pip.py  salt_describe_pkg.py  salt_describe_pkgrepo.py  salt_describe_service.py  salt_describe_ssh_known_hosts.py  salt_describe_sysctl.py  salt_describe_timezone.py  salt_describe_user.py
src/saltext/salt_describe/utils/: ansible_describe.py  chef_describe.py  init.py  salt_describe.py
src/saltext/salt_describe/utils/cron/: __init__.py
src/saltext/salt_describe/utils/pip/: __init__.py
src/saltext/salt_describe/utils/pkg/: __init__.py
src/saltext/salt_describe/utils/service/: __init__.py
src/saltext/salt_describe/utils/ssh_known_hosts/: __init__.py
tests/: conftest.py
tests/integration/: conftest.py
tests/integration/runners/: test_salt_describe.py  test_salt_describe_file.py  test_salt_describe_firewalld.py  test_salt_describe_host.py  test_salt_describe_iptables.py  test_salt_describe_pip.py  test_salt_describe_pkg.py  test_salt_describe_service.py  test_salt_describe_sysctl.py  test_salt_describe_timezone.py  test_salt_describe_user.py
tests/unit/modules/: test_salt_describe_cron.py  test_salt_describe_file.py  test_salt_describe_firewalld.py  test_salt_describe_host.py  test_salt_describe_iptables.py  test_salt_describe_pip.py  test_salt_describe_pkgrepo.py  test_salt_describe_service.py  test_salt_describe_ssh_known_hosts.py  test_salt_describe_sysctl.py  test_salt_describe_timezone.py  test_salt_describe_user_group.py
tests/unit/runners/: test_salt_describe.py  test_salt_describe_cron.py  test_salt_describe_file.py  test_salt_describe_firewalld.py  test_salt_describe_host.py  test_salt_describe_iptables.py  test_salt_describe_pip.py  test_salt_describe_pkg.py  test_salt_describe_pkgrepo.py  test_salt_describe_service.py  test_salt_describe_sysctl.py  test_salt_describe_timezone.py  test_salt_describe_user_group.py
tests/unit/utils/: test_ansible_describe.py  test_init.py  test_salt_describe.py
