[metadata]
name = saltext.salt-describe
description = Salt Describe Runner
long_description = file: README.md
long_description_content_type = text/markdown
author = Megan Wilhite, Gareth J. Greenaway
author_email = mwilhite@vmware.com, ggreenaway@vmware.com
keywords = salt-extension
url = http://github.com/saltstack//salt-describe/
project_urls =
    Source=http://github.com/saltstack//salt-describe/
    Tracker=http://github.com/saltstack//salt-describe/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.5
setup_requires =
  wheel
  setuptools>=50.3.2
  setuptools_scm[toml]>=3.4
  setuptools-declarative-requirements
#install_requires =
#  salt>=3003
#  # Add other module install requirements above this line

[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
salt.loader=
  saltext.salt-describe = saltext.salt_describe


[requirements-files]
install_requires = requirements/base.txt
tests_require = requirements/tests.txt
extras_require =
  dev = requirements/dev.txt
  tests = requirements/tests.txt
  docs = requirements/docs.txt
  docsauto = requirements/docs-auto.txt
  changelog = requirements/changelog.txt


[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[sdist]
owner = root
group = root
